# ct-teletext-viewer

./: .gitignore  LICENSE  README.md  ct-teletext.py  main.py  pyproject.toml
ct_teletext/: __init__.py
